# simple-cdn-networks

./: Makefile  README.md  async_http_server.py  deploy.sh  deployCDN.py  dnsserver  dnsserver.py  httpserver.py  load_test_http_server.py  replica_stress_test.py  runCDN.py  scamp.py  stopCDN.py  test.py
brainstorming/: Architecture.tldr.json  Brainstorm.md  Cache Strategy.ipynb  page_size.csv  pageviews.csv
geoip2/: __init__.py  database.py  errors.py  mixins.py  models.py  records.py  types.py  webservice.py
maxminddb/: __init__.py  decoder.py  file.py  reader.py
origin/: create_zip_file.sh
server/: Cargo.toml  main_actix.rs  main_tide.rs
server/src/: main.rs
