[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["blocking"] }
brotli = "3.3.4"
lazy_static = "1.4.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3.3"
pretty_env_logger = "0.4"

[profile.release]
strip = true  
opt-level = "z"
lto = true
